Bug 71062 - EDITING: Embedded Firebird - Tables with Date-fields let LO crash, when query executed in Tools → SQL
Summary: EDITING: Embedded Firebird - Tables with Date-fields let LO crash, when query...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-30 19:32 UTC by Robert Großkopf
Modified: 2013-11-04 19:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Try a select in Tools → SQL, let show the content of the Table "Date" - crash (46.87 KB, application/vnd.oasis.opendocument.base)
2013-10-30 19:32 UTC, Robert Großkopf
Details
bt on master (50.17 KB, text/plain)
2013-11-01 10:18 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2013-10-30 19:32:01 UTC
Created attachment 88378 [details]
Try a select in Tools → SQL, let show the content of the Table "Date" - crash

Open the attached Database.
There are 3 tables, all with one field beneath the primarykey. The name of the table shows the type of this field.
Go to Tools → SQL. Choose "Show output of "select"-statements".
Try the following select:
SELECT * FROM "Time";
Works right.
SELECT * FROM "DateTime";
Works right.
SELECT * FROM "Date";
LO crashes immediately.

I have tested this with different tables and searched for the field, which produces the crash. You could create a new table with a Date-field and try it with this table - will give the same crash.
Comment 1 Julien Nabet 2013-11-01 10:18:52 UTC
Created attachment 88470 [details]
bt on master

On pc Debian x86-64 with master sources updated yesterday, I reproduced the crash.
It seems there's a kind of loop.
Comment 2 Julien Nabet 2013-11-01 10:19:56 UTC
Lionel/andrzej: one for you?

(if "Show output of "select"-statements" isn't selected, there's no crash).
Comment 3 Julien Nabet 2013-11-01 17:03:09 UTC
Except mistake, I think I found the pb, I've just pushed a fix.
Comment 4 Commit Notification 2013-11-01 17:10:09 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=124beed4078231867f8327e34b90ee1f40c39a30

Resolves: fdo#71062 Embedded Firebird - Tables with Date-fields let LO crash



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2013-11-01 17:38:26 UTC
Robert: I put it at FIXED. If you still reproduce this tomorrow or in 48 hours if needed for next build, don't hesitate to reopen.
Comment 6 Robert Großkopf 2013-11-04 19:33:36 UTC
I could confirm that the query is now working in Tools → SQL, when there is a date-field in the content of a table. Thanks for the very fast fix.