Resolves: fdo#71062 Embedded Firebird - Tables with Date-fields let LO crash

Change-Id: Ie28a1e8765ab9ff6eb345198d6ea223e25429e11